--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "Server.ts",
   "scripts": {
-  "start": "ts-node Servers/Server.ts",
-  "dev": "nodemon --exec ts-node Servers/Server.ts",
-  "type-check": "tsc --noEmit"  
+    "start": "nodemon --watch Servers --exec ts-node Servers/Server.ts",
+    "dev": "nodemon --exec ts-node Servers/Server.ts",
+    "type-check": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +21,20 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^9.0.7",
+    "axios": "^1.7.5",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "morgan": "^1.10.0"
+    "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
+    "express": "^4.21.0",
+    "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.15",
+    "util": "^0.12.5",
+    "validator": "^13.12.0"
   }
 }
