--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^5.0.0",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.10.2",
+    "@types/pg": "^8.11.10",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
     "typescript": "^5.7.2"
@@ -34,6 +35,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.15",
+    "pg": "^8.13.1",
     "util": "^0.12.5",
     "validator": "^13.12.0"
   }
