--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-router-dom": "^6.29.0",
     "react-toastify": "^11.0.3",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
